# tojson

./: .gitignore  README.md
core/: Cargo.toml  build.rs
core/src/: lib.rs
libraries/python/: .gitignore  README.md  pyproject.toml
libraries/python/examples/: example.json  main.py  pyproject.toml
libraries/python/src/tojson/: __init__.py
parsers/python/: build.py  parser.py
