[project]
name = "tojson"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "alex", email = "alex@pdp7.net" }
]
requires-python = ">=3.12"
dependencies = [
    "extism>=1.0.4",
]

[build-system]
requires = ["hatchling", "hatch-build-scripts"]
build-backend = "hatchling.build"

[[tool.hatch.build.targets.sdist.hooks.build-scripts.scripts]]
out_dir = "wasm"
work_dir = "../../core"
commands = [
    "cargo build --release --target wasm32-unknown-unknown",
    "cp target/wasm32-unknown-unknown/release/tojson.wasm tojson.wasm"
]
artifacts = [
    "/tojson.wasm",
]

[tool.uv.workspace]
members = [
    "examples",
    ".",
]
